Prepare Base Model Completed

--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,8 @@
-key: value
+AUGUMENTATION: True
+IMAGE_SIZE: [224, 224, 3]
+BATCH_SIZE: 16
+INCLUDE_TOP: False
+EPOCHS: 50
+CLASSES: 36
+WEIGHTS: imagenet
+LEARNING_RATE: 0.01
