--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,7 +88,7 @@ jobs:
          
       - name: Stop and remove container if running
         run: |
-         docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm -fv cnncls
+         docker ps -q --filter "name=ASL-Classification" | grep -q . && docker stop ASL-Classification && docker rm -fv ASL-Classification
        
       - name: Run Docker Image to serve users
         run: |
